--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -6,6 +6,36 @@ body{
   width: 286px;
   float: left;
 }
+
+#social ul {
+  float: right;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+#social ul li {
+  display: inline;
+}
+
+#social ul li a {
+  text-decoration: none;
+  padding: 0px;
+}
+
+#social ul li a #facebook {
+  color: #3b5998;
+}
+#social ul li a #twitter {
+  color: #4099FF;
+}
+#social ul li a #flickr {
+  color: #ffffff;
+}
+#social ul li a #instagram {
+  color:#125688;
+}
+
+
 #floatImage{
   position:absolute;
   width:50%;
