Added search functionality that repopulates page. The actual search is not working though, but the page gets repopulated.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -14,6 +14,11 @@ body{
   centerX: true;
   centerY: true;
   display: block;
+  float:right;
+}
+
+#searchButton{
+  float: right;
 }
 
 .grid-item{
