--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -2,8 +2,12 @@ body{
   background-color: #000000;
 }
 
+#description{
+  color: white;
+  float: left;
+}
+
 #options{
-  position: fixed;
   width:14%;
   height: 5%;
   top: 1%;
